# internal/app/server/server.go
@@ -74,6 +74,7 @@ func (s *server) configureRouter() {
 		v1.POST("/file", s.v1.AddFile())
 		v1.GET("/file", s.v1.GetLastFile())
 		v1.GET("/lead", s.v1.GetLeadList())
+		v1.GET("/compaign", s.v1.GetCompaignList())
 		v1.GET("/region/predict", s.v1.GetRegionPredictList())
 	}
 }
